# ai-driven-soc

./: .env.example  .gitignore  LICENSE  README.md  TODO.md
.github/: CODEOWNERS  pull_request_template.md
backend/: .env.example  pyproject.toml
backend/app/: main.py  state.py
backend/app/api/v1/: events.py
backend/app/core/: config.py
backend/ingestion/: feeder.py  main_loop.py  normalizer.py  normalizerfixed.py  test_explanation.py  wazuh_client.py
backend/log_evaluation/: severity_scoring.py
docs/: architechture.md  event_schema.md
frontend/src/: index.css
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx
ingestion/: normalizer.py
services/backend/: pyproject.toml
services/backend/app/: main.py
services/frontend/src/: App.css
services/soc/ingestion/: explanation.py  feeder.py  normalizerfixed.py  wazuh_client.py
services/soc/log_evaluation/: log_dataclass.py  severity_scoring.py
tests/: test_wazuhclient.py  wazuh_client_test.py
