[project]
name = "backend"
version = "0.1.0"
description = "backend for AI-driven SOC"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.41.0",
    "lightgbm>=4.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "requests>=2.31",
]
